# libxil

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Dockerfile  LICENSE  libxil.pc.in  libxil.spec
include/xilinx/: sleep.h  xaxidma.h  xaxidma_bd.h  xaxidma_bdring.h  xaxidma_hw.h  xaxidma_porting_guide.h  xaxis_switch.h  xaxis_switch_hw.h  xbasic_types.h  xdebug.h  xenv.h  xenv_linux.h  xenv_none.h  xenv_standalone.h  xenv_vxworks.h  xhls_dft.h  xhls_dft_hw.h  xiic.h  xiic_i.h  xiic_l.h  xil_assert.h  xil_cache_vxworks.h  xil_hal.h  xil_io.h  xil_macroback.h  xil_mem.h  xil_printf.h  xil_testcache.h  xil_testio.h  xil_testmem.h  xil_types.h  xil_util.h  xilflash.h  xilflash_amd.h  xilflash_cfi.h  xilflash_intel.h  xilflash_properties.h  xintc.h  xintc_l.h  xllfifo.h  (+10 more)
orig/axidma_v9_0/src/: xaxidma_bd.c
orig/axidma_v9_13/src/: xaxidma.c  xaxidma_bdring.c  xaxidma_g.c
orig/axis_switch_v1_0/src/: xaxis_switch.c  xaxis_switch.h
orig/common/: xdebug.h  xil_io.h  xil_printf.h
orig/iic/src/: xiic_g.c
orig/intc_v3_4/src/: xintc_l.c
orig/llfifo_v5_0/src/: xllfifo_hw.h
orig/spi_v4_5/src/: xspi_g.c
packaging/: PKGBUILD  README.md
src/: main.c
